# projects-ctl

./: .gitlab-ci.yml  Cargo.toml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  config.rs  main.rs  projects.rs  util.rs
